--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "ampt-vue-js-template",
-  "version": "0.0.0",
-  "private": true,
+  "name": "okka-express",
+  "version": "1.0.0",
+  "description": "okka Hello World",
+  "main": "index.js",
+  "author": "okka",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "ampt:dev": "vite",
-    "ampt:build": "vite build",
-    "preview": "vite preview"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "ws": "^8.13.0",
+    "express": "^4.18.2",
+    "http-proxy": "latest",
+    "request": "^2.88.2"
   },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "vite": "^4.4.6"
-  },
-  "ampt": {
-    "app": "vue-js",
-    "org": "git309726"
-  },
-  "files": [
-    "*"
-  ]
+  "engines": {
+    "node": ">=14"
+  }
 }
